# ePC-SAFT-equilibrium

./: .gitignore  AGENTS.md  ARCHITECTURE.yaml  CMakeLists.txt  CONTEXT.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.serena/: project.yml
cpp/src/: chemical_equilibrium.cpp  chemical_equilibrium.hpp  chemical_equilibrium_bindings.cpp  chemical_equilibrium_solver.cpp  held.cpp  held.hpp  held2.cpp  held2.hpp  held2_progress.cpp  held2_progress.hpp  held2_stage_i_direct.cpp  held2_stage_i_direct.hpp  held2_stage_ii_basin.cpp  held2_stage_ii_basin.hpp  held2_stage_ii_upper.cpp  held2_stage_ii_upper.hpp  held2_stage_iii.cpp  held2_stage_iii_generic.cpp  held2_tolerances.hpp  held_stage_i.cpp  held_stage_ii.cpp  held_stage_iii.cpp  module.cpp  provider.cpp  provider.hpp  saturation.cpp  saturation.hpp  two_phase_flash.cpp  two_phase_flash.hpp
data/reference/: README.md  mea_speciation_input_ledger.json  perdomo_held2_baseline_v1.json  perdomo_held2_baseline_v2.json  perdomo_held2_candidate_v1.json  pure_saturation_anchors.csv  water_self_ionization_iapws_r11_24.yaml
docs/: ownership.md  phase-equilibrium.md
docs/designs/: 2026-07-17-neutral-held-v1.md  2026-07-17-neutral-two-phase-tp-flash.md  2026-07-17-pure-saturation-slice.md  2026-07-21-perdomo-held2.md  2026-07-21-private-reacting-phase-kernel.md  2026-07-21-water-self-ionization-provider-integration.md  2026-07-22-held2-installed-completion.md
docs/migration/: bootstrap-receipt.yaml
docs/plans/: 2026-07-17-neutral-held-v1-plan.md  2026-07-17-neutral-two-phase-tp-flash-plan.md  2026-07-17-pure-saturation-slice.md  2026-07-21-perdomo-held2-solver-strategy.md  2026-07-21-water-self-ionization-provider-integration.md  2026-07-22-general-standard-state-transformation.md  2026-07-22-held2-installed-completion.md
docs/superpowers/plans/: 2026-07-21-phase-equilibrium-documentation-canonization.md  2026-07-21-private-reacting-phase-kernel.md
docs/superpowers/specs/: 2026-07-21-phase-equilibrium-documentation-canonization-design.md
receipts/promotion/: promotion-0001-pure-saturation-v1-candidate.yaml  promotion-0002-neutral-held-v1-candidate.yaml
reviews/: 2026-07-17-pure-saturation-v1.md
scripts/: capture_held2_baseline.py  capture_held2_candidate.py  validate_mea_speciation_ledger.py  validate_saturation.py
src/epcsaft_equilibrium/: __init__.py  _api.py  _equilibrium.pyi
tests/: conftest.py  test_chemical_equilibrium.py  test_held.py  test_held2.py  test_held2_baseline.py  test_held2_candidate.py  test_mea_speciation_ledger.py  test_perdomo_held2_trace.py  test_saturation.py  test_two_phase_flash.py
