[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "epcsaft-equilibrium"
version = "0.1.0.dev0"
description = "Bounded equilibrium routes for the ePC-SAFT provider"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = ["epcsaft==0.1.0.dev0", "pint>=0.25"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/epcsaft_equilibrium"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["epcsaft_equilibrium"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "epcsaft"
ignore_missing_imports = true
